--- a/cartodb_enterprise.html
+++ b/cartodb_enterprise.html
@@ -15,6 +15,12 @@
 	<div id="map" style="width: 100%; height: 100%"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
+
+  <script src="//cdn.maptiks.com/maptiks-leaflet.min.js"></script>
+<script>
+  maptiks.trackcode='46016aee-4945-416a-8c34-4461782b1931';
+</script>
+
 	<script>
 	
 	var parseQueryString = function() {
