--- a/cartodb_enterprise.html
+++ b/cartodb_enterprise.html
@@ -16,9 +16,15 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
 
-  <script src="//cdn.maptiks.com/maptiks-leaflet.min.js"></script>
 <script>
-  maptiks.trackcode='d9d87e67-433c-4eb2-b690-17ccfad94e1f';
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-96033665-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 
 	<script>
