--- a/cartodb_enterprise.html
+++ b/cartodb_enterprise.html
@@ -47,7 +47,7 @@
   
 		var mymap = L.map('map').setView([latitude,longitude ], z);
 
-		L.tileLayer('http://fe-{s}.cmap.io/light_all/{z}/{x}/{y}.png', {
+		L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png', {
 			maxZoom: 20,
 			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, &copy; <a href="https://cartodb.com/attributions">CartoDB</a>'
 		}).addTo(mymap);
